; ModuleID = '/home/carl/AnghaBench/netdata/collectors/proc.plugin/extr_proc_stat.c_wake_cpu_thread.c'
source_filename = "/home/carl/AnghaBench/netdata/collectors/proc.plugin/extr_proc_stat.c_wake_cpu_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@wake_cpu_thread.cpu_wakeups = internal global i64 0, align 8
@wake_cpu_thread.errors = internal global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"Cannot set CPU affinity for core %d\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"CPU affinity errors are disabled\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @wake_cpu_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @wake_cpu_thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = call i32 @CPU_ZERO(i32* %4)
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to i32*
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @CPU_SET(i32 %8, i32* %4)
  %10 = call i32 (...) @pthread_self()
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @pthread_setaffinity_np(i32 %11, i32 4, i32* %4)
  %13 = call i64 @unlikely(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %40

15:                                               ; preds = %1
  %16 = load i32, i32* @wake_cpu_thread.errors, align 4
  %17 = icmp slt i32 %16, 8
  %18 = zext i1 %17 to i32
  %19 = call i64 @unlikely(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %28

21:                                               ; preds = %15
  %22 = load i8*, i8** %2, align 8
  %23 = bitcast i8* %22 to i32*
  %24 = load i32, i32* %23, align 4
  %25 = call i32 (i8*, ...) @error(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %24)
  %26 = load i32, i32* @wake_cpu_thread.errors, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* @wake_cpu_thread.errors, align 4
  br label %39

28:                                               ; preds = %15
  %29 = load i32, i32* @wake_cpu_thread.errors, align 4
  %30 = icmp slt i32 %29, 9
  %31 = zext i1 %30 to i32
  %32 = call i64 @unlikely(i32 %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %28
  %35 = call i32 (i8*, ...) @error(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  %36 = load i32, i32* @wake_cpu_thread.errors, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* @wake_cpu_thread.errors, align 4
  br label %38

38:                                               ; preds = %34, %28
  br label %39

39:                                               ; preds = %38, %21
  br label %40

40:                                               ; preds = %39, %1
  %41 = load i64, i64* @wake_cpu_thread.cpu_wakeups, align 8
  %42 = add i64 %41, 1
  store i64 %42, i64* @wake_cpu_thread.cpu_wakeups, align 8
  ret i8* null
}

declare dso_local i32 @CPU_ZERO(i32*) #1

declare dso_local i32 @CPU_SET(i32, i32*) #1

declare dso_local i32 @pthread_self(...) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @pthread_setaffinity_np(i32, i32, i32*) #1

declare dso_local i32 @error(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
